# TodoManagerApp

./: CMakeLists.txt  compile.bat  compile.sh  qml.qrc
include/: structs.h
include/db/: DatabaseUtils.h
include/models/: MTodoListModel.h
qml/: CustomCalendar.qml  Filter.qml  TodoItemForm.qml  TodoView.qml  main.qml
src/: main.cpp
src/db/: DatabaseUtils.cpp
src/models/: MTodoListModel.cpp
